# python-for-data-science

Array/ex00/: give_bmi.py  tester.py
Array/ex01/: array2D.py  tester.py
Array/ex02/: load_image.py
starting 0/ex00/: hello.py
starting 0/ex01/: format_ft_time.py
starting 0/ex02/: find_ft_type.py
starting 0/ex03/: NULL_not_found.py
starting 0/ex04/: whatis.py
starting 0/ex05/: building.py
starting 0/ex06/: filterstring.py  ft_filter.py
starting 0/ex07/: sos.py
starting 0/ex08/: Loading.py
starting 0/ex09/: README.md  pyproject.toml  test.py
starting 0/ex09/ft_package/: __init__.py  count_in_list.py
